--- a/packages/button/package.json
+++ b/packages/button/package.json
@@ -1,6 +1,6 @@
 {
   "name": "button",
-  "version": "1.0.1-alpha.0",
+  "version": "1.0.1",
   "main": "lib/index.js",
   "module": "src/index.js",
   "dependencies": {
