--- a/packages/button/package.json
+++ b/packages/button/package.json
@@ -12,5 +12,6 @@
     "react": "^15.0.0 || ^16.0.0",
     "react-dom": "^15.0.0 || ^16.0.0",
     "styled-components": "^4.0.0"
-  }
+  },
+  "gitHead": "4f467e3b8e6739bdab1b93b8c176330f3fc073e8"
 }
