--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
-  "name": "root",
-  "private": true,
+  "name": "lerna-material",
+  "version": "0.0.1",
+  "private": false,
   "workspaces": [
     "packages/*"
   ],
