--- a/packages/button/package.json
+++ b/packages/button/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@raphaelscunha/button",
+  "name": "button",
   "version": "1.0.7",
   "main": "lib/index.js",
   "module": "src/index.js",
