--- a/packages/input/package.json
+++ b/packages/input/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@raphaelscunha/input",
+  "name": "input",
   "version": "1.0.7",
   "main": "lib/index.js",
   "module": "src/index.js",
