--- a/packages/button/package.json
+++ b/packages/button/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@raphaelscunha/button",
-  "version": "1.0.15",
+  "name": "@raphaelcunha-ds/button",
+  "version": "0.0.1",
   "main": "lib/index.js",
   "module": "src/index.js",
   "dependencies": {
