--- a/packages/button/package.json
+++ b/packages/button/package.json
@@ -12,5 +12,6 @@
     "react": "^15.0.0 || ^16.0.0",
     "react-dom": "^15.0.0 || ^16.0.0",
     "styled-components": "^4.0.0"
-  }
+  },
+  "gitHead": "72d60ad9fc8dba7bb96b70a854dd66ac6f77ae3b"
 }
