--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "unit": "jest",
     "dev": "start-storybook -p 5555",
     "bootstrap": "lerna bootstrap --use-workspaces",
-    "build": "lerna exec --parallel -- babel --root-mode upward src -d lib --ignore **/*.story.js,**/*.spec.js"
+    "build": "lerna exec --parallel -- babel --root-mode upward src -d lib --ignore **/*.story.js,**/*.spec.js",
+    "publish": "npm publish --access public"
   },
   "devDependencies": {
     "@babel/cli": "^7.8.4",
