--- a/packages/button/package.json
+++ b/packages/button/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@raphaelcunha-ds/button",
+  "name": "@raphaelscunha/button",
   "version": "0.0.6",
   "main": "lib/index.js",
   "module": "src/index.js",
