--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "sampleraphaelscunha",
   "version": "0.0.1",
-  "private": false,
+  "private": true,
   "workspaces": [
     "packages/*"
   ],
