--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "sampleraphaelscunha",
+  "name": "examplesraphaelscunha",
   "version": "0.0.1",
   "private": true,
   "workspaces": [
