--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "dev": "start-storybook -p 5555",
     "bootstrap": "lerna bootstrap --use-workspaces",
     "build": "lerna exec --parallel -- babel --root-mode upward src -d lib --ignore **/*.story.js,**/*.spec.js",
-    "publish": "npm publish --access public"
+    "lerna:publish": "lerna publish from-git"
   },
   "devDependencies": {
     "@babel/cli": "^7.8.4",
