--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "unit": "jest",
     "dev": "start-storybook -p 5555",
     "bootstrap": "lerna bootstrap --use-workspaces",
-    "build": "lerna exec --parallel -- babel --root-mode upward -d lib --ignore **/*.story.js,**/*.spec.js",
+    "build": "lerna exec --parallel -- babel --root-mode upward src -d lib --ignore **/*.story.js,**/*.spec.js",
     "lerna:version": "lerna version --include-merged-tags",
     "lerna:publish": "lerna publish from-git"
   },
