--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.1",
   "private": true,
   "workspaces": [
-    "packages/*"
+    "src/*"
   ],
   "publishConfig": {
     "access": "public"
